fix first message not showing on chat

--- a/src/pages/chat-mode/chat-mode.css
+++ b/src/pages/chat-mode/chat-mode.css
@@ -1,5 +1,5 @@
 .chat-mode {
-    display: flex;
+    display: flex; 
     height: 100%;
     top: 0;
     width: 100%;
@@ -98,6 +98,15 @@
     overflow-y: scroll;
     scroll-behavior: smooth;
     padding-bottom: 150px;
+}
+
+.message-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 40px;
+    align-items: center;
+    margin-top: 150px;
 }
 
 .chat-messages::-webkit-scrollbar {
